--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item d-flex align-items-center px-3 fw-bold">
+              <li class="nav-item d-flex align-items-center px-2 fw-bold">
                 <a class="nav-link active" aria-current="page" href="#"
                   >Giochi</a>
                   <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
-              <li class="nav-item d-flex align-items-center px-3 fw-bold">
+              <li class="nav-item d-flex align-items-center px-2 fw-bold">
                 <a class="nav-link active" href="#">Hardware</a>
                 <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
-              <li class="nav-item d-flex align-items-center px-3 fw-bold">
+              <li class="nav-item d-flex align-items-center px-2 fw-bold">
                 <a class="nav-link active">Servizi</a>
                 <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
-              <li class="nav-item d-flex align-items-center px-3 fw-bold">
+              <li class="nav-item d-flex align-items-center px-2 fw-bold">
                 <a class="nav-link active">Novità</a>
                 <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
-              <li class="nav-item d-flex align-items-center px-3 fw-bold">
+              <li class="nav-item d-flex align-items-center px-2 fw-bold">
                 <a class="nav-link active">Fai acquisti</a>
                 <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
-              <li class="nav-item d-flex align-items-center px-3 fw-bold">
+              <li class="nav-item d-flex align-items-center px-2 fw-bold">
                 <a class="nav-link active">Supporto</a>
                 <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
@@ -73,7 +73,6 @@
                 <img height="25" src="./img/lens.svg" alt="">
               </li>
             </ul>
-            
           </div>
         </div>
       </nav>
@@ -180,7 +179,7 @@
       <!-- /.console -->
       <section class="adventure main_jumbo bg_adventure">
         <div class="text-white container d-flex pt_7">
-            <div class="row flex-column g-5 g-md-5">
+            <div class="row flex-column g-4 g-md-4">
             <div class="col-9 col-lg-3">
               <img class="w-100" src="./img/it-takes-two-logo.png" alt="">
             </div>
@@ -427,8 +426,8 @@
         </div>
         <div class="row">
           <div class="col-12 col-lg-6">
-            <img height="50;" src="./img/sie-logo.svg" alt="">
-            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, nostrum perferendis aperiam totam non dolorem molestiae nesciunt, consequuntur, natus fugiat illo labore obcaecati accusantium? Asperiores nesciunt voluptates voluptas perferendis harum suscipit cum animi nam qui impedit. Libero consequatur non enim distinctio quasi numquam est! Laboriosam commodi perferendis ab inventore consectetur!</p>
+            <img class="mb-3"height="50;" src="./img/sie-logo.svg" alt="">
+            <p class="text-white">Website <i class="far fa-copyright"></i>2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a class="text-white" href="#">Maggiori info.</a></p>
           </div>
         </div>
       </div>
