add hover section jumbo

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -94,7 +94,7 @@
                Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
               </p>
               </div>
-             <div class="my-5">
+             <div class="my-5 btn_transition">
                 <button class="btn btn_red rounded-pill">Acquista ora</button>
               </div>
                 </div>
