--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -102,32 +102,32 @@
         </div>
         <div class="container py-4">
           <div class="row">
-              <div class="col-6 pb-3 col-sm-4 col-lg-2 ">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2">
                  <div class="card_only">
                    <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                  </div>
               </div>
-              <div class="col-6 pb-3 col-sm-4 col-lg-2">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2 movement">
                <div class="card border-0">
                  <img class="w-100 rounded_3" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                </div>
               </div>
-              <div class="col-6 pb-3 col-sm-4 col-lg-2">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2 movement">
                 <div class="card border-0">
                   <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                 </div>
               </div>
-              <div class="col-6 pb-3 col-sm-4 col-lg-2">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2 movement">
                <div class="card border-0">
                  <img class="w-100 rounded_3" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                </div>
              </div>
-              <div class="col-6 pb-3 col-sm-4 col-lg-2">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2 movement">
                  <div class="card border-0">
                    <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                  </div>
               </div>
-              <div class="col-6 pb-3 col-sm-4 col-lg-2">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2 movement">
                  <div class="card border-0">
                    <img class="w-100 rounded_3" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                  </div>
