--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="container py-4">
           <div class="row">
-              <div class="col-6 pb-3 col-sm-4 col-lg-2">
+              <div class="col-6 pb-3 col-sm-4 col-lg-2 movement">
                  <div class="card_only">
                    <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                  </div>
@@ -147,7 +147,9 @@
                 <div class="col-12 col-md-6">
                     <h2 class="mb-4 fw-bold display-6">Console PlayStation 5</h2>
                     <p class="fw-bold text-muted">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
-                    <button class="btn btn-primary rounded-pill">Maggiori informazioni</button>
+                    <div class="btn_transition_blue">
+                      <button class="btn btn-primary rounded-pill">Maggiori informazioni</button>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6">
                     <img class="w-100" src="./img/playstation-5-thumb.png" alt="">
@@ -158,19 +160,19 @@
                       <img class="w-100" src="./img/playstation-5-thumb.png" alt="">
                       <h6 class="mb-4">Console PS5</h6>
                     </div>
-                    <div class="col text-center opacity-75">
+                    <div class="col text-center opacity-75 console_opacity">
                       <img class="w-100" src="./img/joypad-thumb.png" alt="">
                       <h6 class="lh-base">Controller wireless DualSense<span class="sigla_tm">TM</span></h6>
                     </div>
-                    <div class="col text-center opacity-75">
+                    <div class="col text-center opacity-75 console_opacity">
                       <img class="w-100" src="./img/headset-thumb.png" alt="">
                        <h6 class="lh-base">Cuffie wireless con microfono PULSE 3<span class="sigla_tm">TM</span></h6>
                     </div>
-                    <div class="col text-center opacity-75">
+                    <div class="col text-center opacity-75 console_opacity">
                       <img class="w-100" src="./img/remote-thumb.png" alt="">
                        <h6 class="">Telecomando Media</h6>
                     </div>
-                    <div class="col text-center opacity-75">
+                    <div class="col text-center opacity-75 console_opacity">
                       <img class="w-100" src="./img/camera-thumb.jpg" alt="">
                        <h6 class="">Telecamera HD</h6>
                     </div>
