add transition on hover cards section adventure

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -192,7 +192,7 @@
                 <p class="">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in it Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
                 </p>
           </div>
-          <div class="my-5">
+          <div class="my-5 btn_transition">
             <button class="btn btn_red rounded-pill">Acquista ora</button>
           </div>
             </div>
