--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -298,21 +298,26 @@
                        <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
                        <h5 class="display-6 ">PlayStation 4</h5>
                         <p class="fw-bold text-muted">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
-                       <button class="btn btn-primary rounded-pill">Scopri di più</button>
+                        <div class="explore btn_transition_blue">
+                          <button class="btn btn-primary rounded-pill">Scopri di più</button>
+                        </div>
                   </div>
                   <div class="col-sm-12 pb-3 col-md-4">
                        <img class="w-100" src="./img/double11-202010-tw-psvr.jpg" alt="">
                        <h5 class="display-6 ">PlayStation VR</h5>
                         <p class="fw-bold text-muted">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
-                       <button class="btn btn-primary rounded-pill">Scopri di più</button>
-                  </div>
+                       <div class="explore btn_transition_blue">
+                          <button class="btn btn-primary rounded-pill">Scopri di più</button>
+                        </div>
+                        </div>
                   <div class="col-sm-12 pb-3 col-md-4">
                        <img class="w-100" src="./img/dualshock-4-listing-thumb.jpg" alt="">
                        <h5 class="display-6 ">Accessori</h5>
                         <p class="fw-bold text-muted">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
-                       <button class="btn btn-primary rounded-pill">Scopri di più</button>
+                       <div class="explore btn_transition_blue">
+                          <button class="btn btn-primary rounded-pill">Scopri di più</button>
+                        </div>
                   </div>
-                
             </div>
         </div>
       </section>
