add transition on hover section now and fix nav

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -66,7 +66,7 @@
                 <a class="nav-link active">My PlayStation</a>
                 <img height="15" src="./img/chevron-down-solid.svg" alt="">
               </li>
-              <li class="nav-item px-3">
+              <li class="nav-item btn_transition_nav mx-3">
                  <button class="btn btn_dark rounded-pill text-white fw-bold" type="submit">Accedi</button>
               </li>
              <li class="nav-item">
@@ -367,7 +367,9 @@
                 <div class="col-12 col-md-6 py-4">
                     <img class="w-75" src="./img/ps-now-logo-two-column.png" alt="">
                    <p class="py-3 my-3 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
-                    <button class="btn btn-outline rounded-pill border-0 btn_light fw-bold">Esplora PlayStation Now</button>
+                   <div class="btn_transition_now">
+                     <button class="btn btn-outline rounded-pill btn_light fw-bold">Esplora PlayStation Now</button>
+                   </div>
                 </div>
                 <div class="d-none d-sm-none d-md-block col-md-6">
                     <img class="w-100" src="./img/ps-now-april-featured-image-block.png" alt="">
