--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -21,7 +21,11 @@
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
+          <div class="nav me-auto mb-2 mb-lg-0" id="myTab" role="tablist">
+            <div class="nav-item" role="presentation">
+              <a class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"><img src="./img/play_logo.svg" alt=""></a>
+            </div>
+          </div>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,48 +38,225 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item d-flex align-items-center px-2 fw-bold">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Giochi</a>
-                  <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-              <li class="nav-item d-flex align-items-center px-2 fw-bold">
-                <a class="nav-link active" href="#">Hardware</a>
-                <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-              <li class="nav-item d-flex align-items-center px-2 fw-bold">
-                <a class="nav-link active">Servizi</a>
-                <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-              <li class="nav-item d-flex align-items-center px-2 fw-bold">
-                <a class="nav-link active">Novità</a>
-                <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-              <li class="nav-item d-flex align-items-center px-2 fw-bold">
-                <a class="nav-link active">Fai acquisti</a>
-                <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-              <li class="nav-item d-flex align-items-center px-2 fw-bold">
-                <a class="nav-link active">Supporto</a>
-                <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-            </ul>
-            <ul class="navbar-nav me-2 d-flex align-items-center">
-              <li class="nav-item d-flex align-items-center fw-bold">
-                <a class="nav-link active">My PlayStation</a>
-                <img height="15" src="./img/chevron-down-solid.svg" alt="">
-              </li>
-              <li class="nav-item btn_transition_nav mx-3">
-                 <button class="btn btn_dark rounded-pill text-white fw-bold" type="submit">Accedi</button>
-              </li>
-             <li class="nav-item">
-                <img height="25" src="./img/lens.svg" alt="">
-              </li>
-            </ul>
+            <ul class="nav  me-auto mb-2 mb-lg-0" id="myTab" role="tablist">
+            <li class="nav-item nav-item d-flex align-items-center px-2 fw-bold" role="presentation">
+              <a class="nav-link" id="giochi-tab" data-bs-toggle="tab" data-bs-target="#giochi" type="button" role="tab" aria-controls="giochi" aria-selected="false">Giochi</a>
+              <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+            <li class="nav-item nav-item d-flex align-items-center px-2 fw-bold" role="presentation">
+              <a class="nav-link" id="hardware-tab" data-bs-toggle="tab" data-bs-target="#hardware" type="button" role="tab" aria-controls="hardware" aria-selected="false">Hardware</a>
+              <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+            <li class="nav-item nav-item d-flex align-items-center px-2 fw-bold" role="presentation">
+              <a class="nav-link" id="servizi-tab" data-bs-toggle="tab" data-bs-target="#servizi" type="button" role="tab" aria-controls="servizi" aria-selected="false">Servizi</a>
+              <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+            <li class="nav-item nav-item d-flex align-items-center px-2 fw-bold" role="presentation">
+              <a class="nav-link" id="novita-tab" data-bs-toggle="tab" data-bs-target="#novita" type="button" role="tab" aria-controls="novita" aria-selected="false">Novità</a>
+              <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+             <li class="nav-item nav-item d-flex align-items-center px-2 fw-bold" role="presentation">
+              <a class="nav-link" id="acquisti-tab" data-bs-toggle="tab" data-bs-target="#acquisti" type="button" role="tab" aria-controls="acquisti" aria-selected="false">Fai acquisti</a>
+              <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+             <li class="nav-item nav-item d-flex align-items-center px-2 fw-bold" role="presentation">
+              <a class="nav-link" id="supporto-tab" data-bs-toggle="tab" data-bs-target="#supporto" type="button" role="tab" aria-controls="supporto" aria-selected="false">Supporto</a>
+              <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+          </ul>
+            <ul class="nav mb-2 mb-lg-0  me-2 d-flex align-items-center" id="myTab" role="tablist">
+            <li class="nav-item d-flex align-items-center fw-bold pe-3" role="presentation">
+              <a class="nav-link" id="myplay-tab" data-bs-toggle="tab" data-bs-target="#myplay" type="button" role="tab" aria-controls="myplay" aria-selected="true">My PlayStation</a>
+               <img height="15" src="./img/chevron-down-solid.svg" alt="">
+            </li>
+            <li class="nav-item d-flex align-items-center fw-bold px-2 btn_transition_nav" role="presentation">
+              <button class="nav-link btn btn_dark rounded-pill text-white fw-bold" id="accedi-tab" data-bs-toggle="tab" data-bs-target="#accedi" type="button" role="tab" aria-controls="accedi" aria-selected="false">Accedi</button>
+            </li>
+            <li class="nav-item d-flex align-items-center fw-bold" role="presentation">
+              <a class="nav-link" id="search-tab" data-bs-toggle="tab" data-bs-target="#search" type="button" role="tab" aria-controls="search" aria-selected="false"><img height="25" src="./img/lens.svg" alt=""></a>
+            </li>
+          </ul>
           </div>
         </div>
-      </nav>
+      </nav> 
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade bg_white" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS1</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS1</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS1</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+        <div class="tab-pane fade bg_white" id="giochi" role="tabpanel" aria-labelledby="profile-tab">
+          <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS2</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS2</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS2</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+
+        </div>
+        <div class="tab-pane fade bg_white" id="hardware" role="tabpanel" aria-labelledby="contact-tab">
+          <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS3</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS3</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS3</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+        <div class="tab-pane fade bg_white" id="servizi" role="tabpanel" aria-labelledby="contact-tab">
+          <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS4</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS4</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS4</p>            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+        <div class="tab-pane fade bg_white" id="novita" role="tabpanel" aria-labelledby="contact-tab">
+         <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS5</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS5</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS5</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+        <div class="tab-pane fade bg_white" id="acquisti" role="tabpanel" aria-labelledby="contact-tab">
+          <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS6</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS6</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS6</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+        <div class="tab-pane fade bg_white" id="supporto" role="tabpanel" aria-labelledby="contact-tab">
+        <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS7</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS7</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS7</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+        <div class="tab-pane fade bg_white" id="myplay" role="tabpanel" aria-labelledby="contact-tab">
+         <ul class="d-flex align-items-center justify-content-center list-unstyled">
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS8</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS8</p>
+            </li>
+            <li class="">
+                <img src="../Bonus/img/play-menu-ico.png" alt="">
+                <p class="text-center">PS8</p>
+            </li>
+          </ul>
+          <hr>
+          <ul class="d-flex align-items-center justify-content-center ">
+            <li class="mx-3">sub link novità</li>
+            <li class="mx-3">sub link</li>
+            <li class="mx-3">sub link</li>
+          </ul>
+        </div>
+      </div>
     </header>
     <!-- /.site_header -->
     <main class="site_main">
@@ -441,5 +622,7 @@
       </div>
     </footer>
     <!-- /.site_footer -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
+  
 </html>
